// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notation Snapshot 1`] = `
Array [
  <div
    className="rankNotation"
    data-testid="notation-rank-1"
    style={
      Object {
        "fontSize": "10px",
        "paddingRight": "50px",
      }
    }
  >
    1
  </div>,
  <div
    className="fileNotation"
    data-testid="notation-file-a"
    style={
      Object {
        "fontSize": "10px",
        "paddingLeft": "50px",
      }
    }
  >
    a
  </div>,
]
`;

exports[`Notation Snapshot 2`] = `
<div
  className="rankNotation"
  data-testid="notation-rank-3"
  style={
    Object {
      "fontSize": "10px",
      "paddingRight": "50px",
    }
  }
>
  3
</div>
`;

exports[`Notation Snapshot 3`] = `
<div
  className="fileNotation lightSquare"
  data-testid="notation-file-d"
  style={
    Object {
      "fontSize": "10px",
      "paddingLeft": "50px",
    }
  }
>
  d
</div>
`;

exports[`Notation Snapshot 4`] = `
Array [
  <div
    className="rankNotation"
    data-testid="notation-rank-8"
    style={
      Object {
        "fontSize": "10px",
        "paddingRight": "50px",
      }
    }
  >
    8
  </div>,
  <div
    className="fileNotation"
    data-testid="notation-file-h"
    style={
      Object {
        "fontSize": "10px",
        "paddingLeft": "50px",
      }
    }
  >
    h
  </div>,
]
`;

exports[`Notation Snapshot 5`] = `
<div
  className="rankNotation"
  data-testid="notation-rank-6"
  style={
    Object {
      "fontSize": "10px",
      "paddingRight": "50px",
    }
  }
>
  6
</div>
`;

exports[`Notation Snapshot 6`] = `
<div
  className="fileNotation"
  data-testid="notation-file-d"
  style={
    Object {
      "fontSize": "10px",
      "paddingLeft": "50px",
    }
  }
>
  d
</div>
`;
